--- a/styles/skeletal.css
+++ b/styles/skeletal.css
@@ -11,7 +11,7 @@
     font-weight: bolder;
     
     border: dashed 2px rgb(117, 127, 149);
-    padding: 2%;
+    padding: 3% 3% 3% 3%;
     border-radius: 20px;
     transition: border-color 0.3s ease-in-out;
     text-align: center;
@@ -19,6 +19,8 @@
 
     opacity: 0;
     transform: scale(0);
+
+    position: relative;
 
 }
 h1 {
@@ -63,6 +65,22 @@ h4 {
         font-size: 0.9rem; 
         margin: 0.5rem 0;
     }
+    .status-dot {
+        top: 8px;
+        right: 8px;
+        width: 7px;
+        height: 7px;
+    }
+    .status-dot::before {
+        width: 11px; /* 4px larger than 7px dot */
+        height: 11px;
+    }
+
+    .status-dot:hover::after {
+        font-size: 0.7rem;
+        top: -25px;
+        right: -8px;
+    }
 }
 @media (max-width: 480px) {
     .center {
@@ -79,6 +97,21 @@ h4 {
     a, h4 {
         font-size: 0.8rem;
         margin: 0.4rem 0;
+    }
+    .status-dot {
+        top: 6px;
+        right: 6px;
+        width: 6px;
+        height: 6px;
+    }
+    .status-dot::before {
+        width: 10px; /* 4px larger than 6px dot */
+        height: 10px;
+    }
+    .status-dot:hover::after {
+        font-size: 0.65rem;
+        top: -20px;
+        right: -6px;
     }
 
     .main {
