--- a/styles/hover.css
+++ b/styles/hover.css
@@ -21,10 +21,10 @@ h4:hover{
     top: -40px;
     right: 0px;
     background-color: rgba(0, 0, 0, 0.53);
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 0.8rem;
+    color: rgb(175, 175, 175);
+    padding: 6px 6px;
+    border-radius: 20px;
+    font-size: 0.7rem;
     white-space: nowrap;
     z-index: 10;
     
